--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^48.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-web": "~0.18.7"
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -21,7 +27,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.8",
-    "typescript": "*"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "expo start",
