--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^48.0.7",
+    "expo-font": "~11.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
