--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -10,7 +11,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^6.0.0-rc.3"
   },
