--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^6.0.0-rc.3"
   },
